k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: goserver-service
spec:
  selector:
    name: goserver
  type: NodePort
  ports:
  - name: goserver-service
    port: 80
    targetPort: 7000
    protocol: TCP
    NodePort: 30001
