k8s/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-host
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt"
    ingress.kubernetes.io/force-ssl-redirect: "true"
  spec:
    rules:
    - host: "ingress.fullcycle.com.br"
      http:
        path:
        - pathType: Prefix
          path: "/"
          backend:
            serviceName: goserver-service
            servicePort: 80
    tls:
    - hosts:
      - "ingress.fullcycle.com.br"
      secretName: letsencrypt-tls
